fixes element overlap

--- a/assets/scss/brigade-app.scss
+++ b/assets/scss/brigade-app.scss
@@ -524,7 +524,7 @@ svg {
 
 #kubernetes {
   position: absolute;
-  left: 10vw;
+  left: 17vw;
   right: 5vw;
   width: 95vw;
   height: 500px;
